# serene

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile  package-lock.json  pre-commit  tailwind.config.js
.github/workflows/: rust-ci.yml
apple/serene/: ContentView.swift  Item.swift  sereneApp.swift
apple/serene.xcodeproj/: project.pbxproj
apple/sereneTests/: sereneTests.swift
apple/sereneUITests/: sereneUITests.swift  sereneUITestsLaunchTests.swift
serene/: settings.gradle.kts
serene/.fleet/: receipt.json
serene/composeApp/: build.gradle.kts
serene/iosApp/Configuration/: Config.xcconfig
serene/iosApp/iosApp.xcodeproj/: project.pbxproj
serene/serene/: Item.swift
serene/serene.xcodeproj/: project.pbxproj
serene/server/: build.gradle.kts
serene/shared/: build.gradle.kts
sereneios/serene/: ContentView.swift  sereneApp.swift
sereneios/serene.xcodeproj/: project.pbxproj
sereneios/sereneTests/: sereneTests.swift
sereneios/sereneUITests/: sereneUITests.swift  sereneUITestsLaunchTests.swift
server/: .gitignore  Cargo.toml  justfile
server/src/: lib.rs  main.rs  routes.rs
server/src/routes/: auth.rs  bff.rs
src/: component.rs  main.rs
web/: package-lock.json  package.json  tailwind.config.js
web-rust/: .gitignore  Cargo.toml  Dioxus.toml
web-rust/public/: tailwind.css
web-rust/src/: main.rs  server.rs
web/src/: App.tsx  index.css  output.css
web/src/components/: header.tsx  page.tsx  usericon.tsx
web/src/pages/: home.tsx  index.tsx
web/src/utility/: auth.tsx
(+12 files in other folders)
